[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/Frog_Adventure/Enemies/Plant/Hit (44x42).png" type="Texture" id=1]
[ext_resource path="res://Assets/Frog_Adventure/Enemies/Plant/Idle (44x42).png" type="Texture" id=2]
[ext_resource path="res://Assets/Frog_Adventure/Enemies/Plant/Attack (44x42).png" type="Texture" id=3]
[ext_resource path="res://Scripts/Plant.gd" type="Script" id=4]
[ext_resource path="res://Assets/thorns.png" type="Texture" id=5]

[sub_resource type="TileSet" id=8]
0/name = "thorns.png 0"
0/texture = ExtResource( 5 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 128, 112 )
0/tile_mode = 2
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 16, 16 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 70, 8.99999 )

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "attack"
length = 1.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("texture:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("texture:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "shoot"
} ]
}

[sub_resource type="Animation" id=2]
resource_name = "hit"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("texture:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("texture:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("texture:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 11 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("texture:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10 ]
}

[sub_resource type="CircleShape2D" id=6]
radius = 48.1664

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 10, 8 )

[node name="Plant" type="KinematicBody2D"]
position = Vector2( 0, -40 )
scale = Vector2( 2, 2 )
collision_layer = 48
script = ExtResource( 4 )

[node name="TileMap" type="TileMap" parent="."]
modulate = Color( 0, 1, 0.227451, 1 )
tile_set = SubResource( 8 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -524289, -1073741824, 262149, -589824, -1610612736, 196615, -524288, 0, 131079, -458752, 0, 131079, -327681, 0, 196614, -393216, -1610612736, 262151, -262145, 0, 65543, -196609, 0, 65543, -131073, -1073741824, 327680, -196608, -1610612736, 327680, -131072, 1610612736, 393216, -131071, 0, 393216, -65536, 0, 196615, -65535, -1610612736, 393216, 0, 0, 65543 )

[node name="texture" type="Sprite" parent="."]
texture = ExtResource( 3 )
hframes = 8

[node name="collision" type="CollisionShape2D" parent="."]
position = Vector2( 1.00024, -70 )
rotation = 1.5708
shape = SubResource( 9 )

[node name="anim" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/RESET = SubResource( 1 )
anims/attack = SubResource( 5 )
anims/hit = SubResource( 2 )
anims/idle = SubResource( 3 )

[node name="playerDetector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="playerDetector"]
position = Vector2( -120, 0 )
shape = SubResource( 6 )

[node name="spawnShoot" type="Position2D" parent="."]
position = Vector2( -23, -2 )

[node name="hitbox" type="Area2D" parent="."]

[node name="collision" type="CollisionShape2D" parent="hitbox"]
position = Vector2( -2, 8 )
shape = SubResource( 7 )

[connection signal="body_entered" from="playerDetector" to="." method="_on_playerDetector_body_entered"]
[connection signal="body_exited" from="playerDetector" to="." method="_on_playerDetector_body_exited"]
[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
